<resources>
    <string name="app_name">Turn Tracker</string>

    <!-- drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    
    <!-- Strings related to login -->
    <string name="prompt_username">username</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_incorrect_username">This username is incorrect</string>
    <string name="error_network">Network error</string>
    <string name="error_unknown">Unknown error</string>
    <string name="error_internal">Internal error</string>
    <string name="error_timeout">Timeout error</string>
    <string name="error_server">Server error</string>
    <string name="error_unreachable">Bad Server IP</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_main">Turn Tracker</string>
    <string name="title_activity_login">Login to Turn Tracker</string>

    <!-- Task -->
    <string name="user_order_list_label">Order</string>
    <string name="user_list_label">Users</string>
    <string name="turn_list_label">Turns</string>
    <string name="create_task_title">Create Task</string>
    <string name="edit_task_title">Edit Task</string>
    <string name="tasks_empty">You don\'t have any tasks.\n\nTap to refresh.</string>
    <string name="tasks_failed">Failed to get tasks.\n\nTap to refresh.</string>
    <string name="status_empty">No status found.</string>
    <string name="status_failed">Failed to get status.\n\nTap to refresh.</string>
    <string name="period_label">Period</string>
    <string name="creator_label">Creator</string>
    <string name="prompt_name">name</string>
    <string name="prompt_period">period</string>

    <!-- Menu -->
    <string name="action_info">Info</string>
    <string name="action_delete">Delete</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>

    <!-- Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_login_settings">Login Settings</string>

    <!-- General settings -->
    <string name="pref_header_network">Network</string>
    <string name="pref_title_server_ip">Server IP Address</string>
    <string name="pref_default_server_ip">192.168.1.253</string>
    <string name="pref_title_server_port">Server Port</string>
    <string name="pref_default_server_port">3000</string>

    <!-- Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_token_sent_to_server">Token Sent To Server</string>
    <string name="pref_title_token">Token</string>
    <string name="pref_title_token_retry">Force Retry</string>
    <string name="pref_title_token_refresh">Force Refresh</string>
    <string name="pref_summary_token_retry">Try to send the token to the server again</string>
    <string name="pref_summary_token_refresh">Delete and get a new token</string>
    <string name="notifications_enabled_description">Notifications are enabled for this task</string>
    <string name="notifications_disabled_description">Notifications are disabled for this task</string>
    <string name="reminders_enabled_description">Reminders are enabled for this task</string>
    <string name="reminders_disabled_description">Reminders are disabled for this task</string>
    <string name="enable_notifications_mine">Notifications When It\'s My Turn</string>
    <string name="enable_notifications_all">Notifications After Any Turn</string>
    <string name="disable_notifications">Notifications Off</string>
    <string name="enable_reminders">Reminders On</string>
    <string name="disable_reminders">Reminders Off</string>
    <string name="snooze_duration">Snooze Duration</string>
    <string name="snooze_summary">How long to snooze notifications</string>
    <string name="label_created">Created</string>
    <string name="label_modified">Modified</string>
    <string name="label_creator">Creator</string>
    <string name="label_id">ID</string>
    <string name="action_take_turn_in_past">Take Turn In Past</string>
    <string name="write_nfc_tag">Write NFC Tag</string>
    <string name="test_notification">Test Notification</string>
</resources>
