<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_refresh" android:title="@string/action_refresh"
        android:orderInCategory="0" app:showAsAction="always" android:icon="@drawable/ic_refresh_24dp" />
    <item android:id="@+id/action_pick_turn_date" android:title="@string/action_take_turn_in_past"
        android:orderInCategory="1" app:showAsAction="ifRoom" android:icon="@drawable/ic_calendar_24dp" />
    <item android:id="@+id/action_edit_task" android:title="@string/edit_task_title"
        android:orderInCategory="2" app:showAsAction="never" android:icon="@drawable/ic_edit_24dp" />
    <item android:id="@+id/action_write_nfc" android:title="@string/write_nfc_tag"
        android:orderInCategory="3" app:showAsAction="never" android:icon="@drawable/ic_nfc_24dp" />
</menu>
