<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText android:id="@+id/nameEditText" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:hint="@string/prompt_name"
             android:inputType="text" android:maxLines="1" android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText android:id="@+id/periodEditText" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:hint="@string/prompt_period"
            android:inputType="number" android:maxLines="1" android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/user_list_label"
        android:id="@+id/subHeaderTextView"
        android:layout_marginTop="10dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"/>

</LinearLayout>