<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingTop="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_gravity="end"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/label_id" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                tools:text="4"
                android:id="@+id/textViewId" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_gravity="end"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/label_creator" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                tools:text="Mark"
                android:id="@+id/textViewCreator" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_gravity="end"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/label_created"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                tools:text="Sun Nov 08 14:40:57 PST 2015"
                android:id="@+id/textViewCreated" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_gravity="end"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/label_modified"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                tools:text="Mon Mar 28 22:04:37 PDF 2016"
                android:id="@+id/textViewModified" />
        </TableRow>
    </TableLayout>
</RelativeLayout>